Pull #18672: Add `JavaLangAPIs`